# alias-ea

./: .easignore  .env.example  .env.vercel.example  .gitignore  .vercelignore  AGENTS.md  CONVEX_SETUP.md  DEPLOYMENT.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  MIGRATION_ANALYSIS_LUNA1_TO_LUNA.md  NIA_SEARCH_STRATEGY.md  README.md  app.json  metro.config.js  package-lock.json  package.json  polyfills.ts  postcss.config.js  tailwind.config.js  vercel.json
.claude/: settings.local.json
.qdrant_data/: meta.json
api/: chat+api.ts  health+api.ts  index.ts  workos-callback+api.ts
app/: _layout.tsx
components/: ActionSheetThemed.tsx  AiCircle.tsx  AnimatedFab.tsx  Avatar.tsx  BotSwitch.tsx  BusinessSwitch.tsx  Button.tsx  CameraCapture.tsx  Card.tsx  CardScroller.tsx  ChatInput.tsx  Chip.tsx  ConfirmationModal.tsx  Conversation.tsx  ConversationErrorBoundary.tsx  CustomDrawerContent.tsx  DrawerButton.tsx  ErrorBoundary.tsx  Expandable.tsx  Favorite.tsx  GlobalErrorHandler.tsx  Header.tsx  Icon.tsx  ListLink.tsx  MockConversation.tsx  PageLoader.tsx  Placeholder.tsx  ProductVariantCreator.tsx  Review.tsx  ShimmerText.tsx  ShowRating.tsx  SkeletonLoader.tsx  SliderCard.tsx  Sphere.tsx  TabButton.tsx  ThemeTabs.tsx  ThemeToggle.tsx  Toast.tsx  VoiceSelectCard.tsx
contexts/: AuthContext.tsx  ConvexClientProvider.tsx  ThemeContext.tsx
convex/: auditLogs.ts  config.ts  invitations.ts  memberships.ts  organizations.ts  schema.ts  sessions.ts  (+3 more)
server/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml  railway.toml  start.sh  token_server.py
(+155 files in other folders)
